# Flutter-RTM-Desktop

./: .gitignore  .metadata  pubspec.yaml
.github/workflows/: main.yml
example/: .metadata  README.md  pubspec.yaml
example/lib/: AppId.dart  main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt  Runner.sln
example/windows/flutter/: GeneratedPlugins.props  generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: agora_rtm.dart
lib/src/: agora_rtm_channel.dart  agora_rtm_client.dart  agora_rtm_plugin.dart  utils.dart
macos/: agora_rtm.podspec
macos/Classes/: AgoraRtmPlugin.swift  RTMChannel.swift  RTMClient.swift
test/: agora_rtm_test.dart
windows/: CMakeLists.txt  PluginInfo.props  RTMChannel.cpp  RTMChannel.h  RTMClient.cpp  RTMClient.h  agora_rtm_plugin.cpp  agora_rtm_plugin.h  plugin.vcxproj  plugin.vcxproj.filters
windows/include/agora_rtm/: RTMChannel.h  RTMClient.h  agora_rtm_plugin.h
windows/sdk/lib/: agora_rtm_sdk.lib
